fix wraper

--- a/dz4/css/hw4.css
+++ b/dz4/css/hw4.css
@@ -1,11 +1,10 @@
 body {
   background-color: #0c739f;
   background-image: url(../img/background.jpg);
-  background-size: auto;
   background-repeat: repeat-x;
   }
 .wraper {
-  margin: 2% 11% 15px 11%;
+  margin: 40px 11% 15px 11%;
   background-color: white;
 }
 p,div,a,li {
